Fix hidden portrait mode navigation on ios

--- a/output/style.css
+++ b/output/style.css
@@ -67,6 +67,12 @@ a:link, a:visited, a:active {
   color: inherit;
 }
 
+svg {
+  /* fix ios bug - https://stackoverflow.com/questions/26091989/svg-viewbox-height-issue-on-ios-safari */
+  width: 100%;
+  height: 100%;
+}
+
 
 /* responsiveness */
 .portrait {
