--- a/src/partials/page.partial.css
+++ b/src/partials/page.partial.css
@@ -33,6 +33,12 @@ a:link, a:visited, a:active {
   color: inherit;
 }
 
+svg {
+  /* fix ios bug - https://stackoverflow.com/questions/26091989/svg-viewbox-height-issue-on-ios-safari */
+  width: 100%;
+  height: 100%;
+}
+
 
 /* responsiveness */
 .portrait {
